--- a/styles/header.css
+++ b/styles/header.css
@@ -1,9 +1,9 @@
 header{
     display: flex;  
     justify-content: space-between  ;
-    padding: 0 20px;
+    padding: 15px 300px;
     background-color: black;
-  
+    align-items: center;
 }
 .logo-img{
     width: 200px;
