--- a/styles/main.css
+++ b/styles/main.css
@@ -26,3 +26,29 @@
     width:600px;
     height: 300px;
 }
+
+.projects-container{
+    padding: 60px 200px;
+}
+.projects-title{
+    text-align: center;
+}
+
+.projects-columns{
+display: flex;
+justify-content: space-evenly;
+}
+
+.project-column{
+display: flex;
+align-items: center;
+flex-direction: column;
+text-align: center;
+max-width: 200px;
+}
+.project-img{
+    width: 200px;
+    height: 200px;
+    border: 3px solid rgb(137, 137, 201);
+    border-radius: 10px;
+}
