--- a/styles/main.css
+++ b/styles/main.css
@@ -32,6 +32,7 @@
 }
 .projects-title{
     text-align: center;
+    margin-bottom: 30px;
 }
 
 .projects-columns{
@@ -64,4 +65,38 @@ max-width: 200px;
     text-align: end;
     font-weight: bold;
     font-size: 20px;
+}
+
+.signin-container{
+    padding: 80px 400px;
+}
+
+.signin{
+    display: flex;
+    align-items: end;
+    justify-content: space-between;
+    padding: 45px 80px;
+    background-color: rgb(137, 137, 201);
+    border-radius: 5px;
+    color: white;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0,0.3);
+}
+
+.signin-text{
+    font-size: 30px;
+    font-weight: bold;
+}
+.lower-singin-but{
+    padding: 15px 20px;
+    border-radius: 5px;
+    background-color: rgb(137, 137, 201);
+    border: 1px solid white;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0,0.3);
+}
+.signup-top-but{
+    padding: 15px 20px;
+    border-radius: 5px;
+    background-color: rgb(137, 137, 201);
+    border: none;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0,0.3);
 }
