--- a/styles/main.css
+++ b/styles/main.css
@@ -2,7 +2,7 @@
     padding-top: 100px;
     padding-left: 300px;
     padding-right: 300px;
-    background:linear-gradient(to bottom,black 20%,white);
+    background-color: black;
     display: flex;
     justify-content: space-between;
     color: white;
@@ -100,3 +100,16 @@ max-width: 200px;
     border: none;
     box-shadow: 0px 0px 10px rgba(0, 0, 0,0.3);
 }
+
+footer{
+background-color: black;
+padding: 60px 200px;
+}
+
+address{
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
