Add media for size less then 768px on some elements
It doesnt look completle terrible now. Still not good
will add more of media later.

--- a/styles/main.css
+++ b/styles/main.css
@@ -113,3 +113,12 @@ address{
     align-items: center;
 }
 
+@media (max-width: 768px) {
+    .introduction-container, .projects-container, .quote-container, .signin-container,footer,header {
+      padding-left: 50px;
+      padding-right:50px;
+    .img-introduction{
+        width: 300px;
+    }
+}
+}
